my-app-chart/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebsite-deployment
  labels:
    app: mywebsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mywebsite
  template:
    metadata:
      labels:
        app: mywebsite
    spec:
      containers:
      - name: mywebsite-app
        image: 704505749045.dkr.ecr.us-east-1.amazonaws.com/mywebsite:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
